leaderboard overflow fixes

--- a/src/styles/components/dropdown.scss
+++ b/src/styles/components/dropdown.scss
@@ -34,7 +34,6 @@
   background: transparent;
   padding-top: 15px;
   transform: translateY(-15px);
-  z-index: -1;
   opacity: 0;
   display: flex;
   flex-direction: column;
